--- a/main.html
+++ b/main.html
@@ -4,19 +4,18 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Place the item - 1</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="holder">
-    	<div class="item item-1">1</div>
-    	<div class="item item-2">2</div>
-    	<div class="item item-3">3</div>
-    	<div class="item item-4">4</div>
-   </div>
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div class="holder">
+	<div class="box">boxes</div>
+	<div class="box">boxes</div>
+	<div class="box">boxes</div>
+	<div class="box">boxes</div>
+  </div>
 </body>
-
-</html>
+<html>
